Several things - Some cleaning in etc/repository: removed several librarires no longer needed - HTML5 backend is up again - Minor bugfixes